# 2025-Bias-A-Thon

./: .gitignore  main.py  pyproject.toml  submission_checkpoint_0.csv
.github/ISSUE_TEMPLATE/: 기능-추가.md
code/: baseline.py  make_prompt.py  models..py
src/: baseline.py  model.py
src/data/: sample_submission.csv
src/resources/: prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt  prompt5.txt  prompt6.txt  prompt7.txt  prompt8.txt
