[project]
name = "bias-a-thon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "argparse>=1.4.0",
    "huggingface-hub>=0.30.2",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
